Added Maven aggregator project structure. Separated library/ and example/. Updated readme.md.